--- a/pages/dadoscadastrais.html
+++ b/pages/dadoscadastrais.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atualizar Dados Cadastrais</title>
-    <link rel="stylesheet" href="dadoscadastrais.css">
-</head>
 <body>
+    <link rel="stylesheet" href="../assets/css/dadoscadastrais.css">
     <div class="container">
         <header>
             <h1>ATUALIZAR DADOS CADASTRAIS</h1>
