--- a/pages/historico.html
+++ b/pages/historico.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Histórico do Aluno</title>
-    <link rel="stylesheet" href="historico.css">
-</head>
 <body>
+    <link rel="stylesheet" href="../assets/css/historico.css">
     <header class="principal">
         <div class="logo">
-            <img src="domboscomarcas.png" alt="Dom Bosco Logo">
+            <img src="../assets/images/domboscomarcas.png" alt="Dom Bosco Logo">
         </div>
         <nav>
             <ul>
@@ -20,9 +13,9 @@
             </ul>
         </nav>
         <div class="social-icons">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
+            <a href="#"><img src="../assets/images/facebook-icon.png" alt="Facebook"></a>
+            <a href="#"><img src="../assets/images/instagram-icon.png" alt="Instagram"></a>
+            <a href="#"><img src="../assets/images/youtube-icon.png" alt="YouTube"></a>
         </div>
     </header>
 
