--- a/pages/homescreen.html
+++ b/pages/homescreen.html
@@ -3,43 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dom Bosco - Tempo Exponencial</title>
-    <link rel="stylesheet" href="homescreen.css">
+    <title>Dom Bosco - Para um Tempo Exponencial</title>
+    <link rel="stylesheet" href="../assets/css/homescreen.css">
 </head>
 <body>
     <header>
-        <h1>Dom Bosco</h1>
-        <h2>Para um Tempo Exponencial</h2>
+        <div class="header-content">
+            <img src="../assets/images/domboscomarcas.png" alt="Logo Dom Bosco" class="logo">
+        </div>
         <nav>
-            <ul>
-                <li><a href="#">Histórico do aluno</a></li>
+            <ul class="menu">
+                <li><a href="historico.html">Histórico do aluno</a></li>
                 <li><a href="paineldospais.html">Painel dos pais</a></li>
-                <li><a href="#">Diretrizes</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="dadoscadastrais.html">Diretrizes</a></li>
+                <li><a href="atendimento.html">Contato</a></li>
             </ul>
         </nav>
-        <div class="social-icons">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-            <a href="#"><img src="youtube-icon.png" alt="YouTube"></a>
-        </div>
     </header>
 
     <main>
-        <section class="card-container">
+        <section class="cards">
             <div class="card">
-                <h3>Aluno</h3>
+                <img src="../assets/images/aluno.png" alt="Icone Aluno">
+                <h2>ALUNO</h2>
                 <p>Atualize informações importantes do aluno, como endereço, contatos de emergência e dados médicos, de forma simples e rápida.</p>
             </div>
             <div class="card">
-                <h3>Atendimento</h3>
+                <img src="../assets/images/atendimento.png" alt="Icone Atendimento">
+                <h2>ATENDIMENTO</h2>
                 <p>Conversar com um atendente para tirar dúvidas sobre o aluno(a), a escola e a metodologia.</p>
             </div>
             <div class="card">
-                <h3>Documentos</h3>
+                <img src="../assets/images/documentos.png" alt="Icone Documentos">
+                <h2>DOCUMENTOS</h2>
                 <p>Visualizar documentos que foram realizados, documentos pendentes e não finalizados.</p>
             </div>
         </section>
     </main>
+
 </body>
 </html>
