--- a/pages/paineldospais.html
+++ b/pages/paineldospais.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel dos Pais - Dom Bosco</title>
-    <link rel="stylesheet" href="paineldospais.css">
-</head>
 <body>
+    <link rel="stylesheet" href="../assets/css/paineldospais.css">
     <header class="header">
-        <img src="domboscomarcas.png" alt="Logo Dom Bosco" class="logo">
+        <img src="../assets/images/domboscomarcas.png" alt="Logo Dom Bosco" class="logo">
         <nav>
             <a href="#">Histórico do aluno</a>
             <a href="#">Painel dos pais</a>
@@ -25,7 +18,7 @@
             </div>
 
             <div class="image-box">
-                <img src="family.png" alt="Família">
+                <img src="../assets/images/family.png" alt="Família">
             </div>
 
             <div class="panel-box">
