--- a/pages/atendimento.html
+++ b/pages/atendimento.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atendimento Educacional - Dom Bosco</title>
-    <link rel="stylesheet" href="atendimento.css">
-</head>
 <body>
+    <link rel="stylesheet" href="../assets/css/atendimento.css">
     <header class="header">
-        <img src="domboscomarcas.png" alt="Logo Dom Bosco" class="logo">
+        <img src="../assets/images/domboscomarcas.png" alt="Logo Dom Bosco" class="logo">
         <nav>
             <a href="#">Histórico do aluno</a>
             <a href="#">Painel dos pais</a>
@@ -19,7 +12,7 @@
 
     <main class="content">
         <div class="image-box">
-            <img src="image.png" alt="Professor e Aluno">
+            <img src="../assets/images/image.png" alt="Professor e Aluno">
         </div>
 
         <div class="text-box">
