desenvolvimento de faq & formulário, reajuste em direcionamentos

--- a/pages/atendimento.html
+++ b/pages/atendimento.html
@@ -3,10 +3,10 @@
     <header class="header">
         <img src="../assets/images/domboscomarcas.png" alt="Logo Dom Bosco" class="logo">
         <nav>
-            <a href="#">Histórico do aluno</a>
-            <a href="#">Painel dos pais</a>
-            <a href="#">Diretrizes</a>
-            <a href="#">Contato</a>
+            <a href="historico.html">Histórico do aluno</a>
+            <a href="paineldospais.html">Painel dos pais</a>
+            <a href="dadoscadastrais.html">Diretrizes</a>
+            <a href="faq.html">Perguntas Frequentes</a>
         </nav>
     </header>
 
