--- a/pages/historico.html
+++ b/pages/historico.html
@@ -6,10 +6,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Histórico do aluno</a></li>
-                <li><a href="#">Painel dos pais</a></li>
-                <li><a href="#">Diretrizes</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="faq.html">Perguntas Frequentes</a></li>
+                <li><a href="paineldospais.html">Painel dos pais</a></li>
+                <li><a href="dadoscadastrais.html">Diretrizes</a></li>
+                <li><a href="atendimento.html">Contato</a></li>
             </ul>
         </nav>
         <div class="social-icons">
