reformulação dos formulários

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <input type="password" placeholder="Senha" required>
                 <button type="submit" class="submit-btn">Entrar</button>
             </form>
-            <a href="#" class="register-link">Não tem cadastro? faça aqui!</a>
+            <a href="pages/dadoscadastrais.html" class="register-link">Não tem cadastro? faça aqui!</a>
         </div>
         <div class="image-box">
             <img src="assets/images/teacher-and-student.jpg" alt="Teacher and Student">
