--- a/pages/diretrizes.html
+++ b/pages/diretrizes.html
@@ -1,11 +1,11 @@
 <body>
-    <link rel="stylesheet" href="../assets/css/atendimento.css">
+    <link rel="stylesheet" href="../assets/css/diretrizes.css">
     <header class="header">
         <img src="../assets/images/domboscomarcas.png" alt="Logo Dom Bosco" class="logo">
         <nav>
             <a href="historico.html">Histórico do aluno</a>
             <a href="paineldospais.html">Painel dos pais</a>
-            <a href="dadoscadastrais.html">Diretrizes</a>
+            <a href="diretrizes.html">Diretrizes</a>
             <a href="faq.html">Perguntas Frequentes</a>
         </nav>
     </header>
