--- a/pages/historico.html
+++ b/pages/historico.html
@@ -8,8 +8,8 @@
             <ul>
                 <li><a href="faq.html">Perguntas Frequentes</a></li>
                 <li><a href="paineldospais.html">Painel dos pais</a></li>
-                <li><a href="dadoscadastrais.html">Diretrizes</a></li>
-                <li><a href="atendimento.html">Contato</a></li>
+                <li><a href="diretrizes.html">Diretrizes</a></li>
+                <li><a href="formulario.html">Contato</a></li>
             </ul>
         </nav>
         <div class="social-icons">
