--- a/pages/paineldospais.html
+++ b/pages/paineldospais.html
@@ -5,8 +5,8 @@
         <nav>
             <a href="historico.html">Histórico do aluno</a>
             <a href="faq.html">Perguntas Frequentes</a>
-            <a href="dadoscadastrais.html">Diretrizes</a>
-            <a href="atendimento.html">Contato</a>
+            <a href="diretrizes.html">Diretrizes</a>
+            <a href="formulario.html">Contato</a>
         </nav>
     </header>
 
