--- a/pages/faq.html
+++ b/pages/faq.html
@@ -15,8 +15,8 @@
                 <ul>
                     <li><a href="historico.html">Histórico do Aluno</a></li>
                     <li><a href="paineldospais.html">Painel dos pais</a></li>
-                    <li><a href="dadoscadastrais.html">Diretrizes</a></li>
-                    <li><a href="atendimento.html">Contato</a></li>
+                    <li><a href="diretrizes.html">Diretrizes</a></li>
+                    <li><a href="formulario.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
